// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a test for TextFormalityUpsell component renders the component in Elementor 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

<div>
  <p>
    <b>
      Yoast SEO Premium
    </b>
     will help you assess the formality level of your text.
  </p>
  <a
    className="yoast-button yoast-button-upsell"
    href="https://yoa.st/formality-upsell-elementor"
    rel={null}
    target="_blank"
  >
    Unlock with Premium
    <span
      aria-hidden="true"
      className="yoast-button-upsell__caret"
    />
    <span
      className="c0"
    >
      (Opens in a new browser tab)
    </span>
  </a>
</div>
`;

exports[`a test for TextFormalityUpsell component renders the component in metabox 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

<div>
  <p>
    <b>
      Yoast SEO Premium
    </b>
     will help you assess the formality level of your text.
  </p>
  <a
    className="yoast-button yoast-button-upsell"
    href="https://yoa.st/formality-upsell-metabox"
    rel={null}
    target="_blank"
  >
    Unlock with Premium
    <span
      aria-hidden="true"
      className="yoast-button-upsell__caret"
    />
    <span
      className="c0"
    >
      (Opens in a new browser tab)
    </span>
  </a>
</div>
`;

exports[`a test for TextFormalityUpsell component renders the component in sidebar 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

<div>
  <p>
    <b>
      Yoast SEO Premium
    </b>
     will help you assess the formality level of your text.
  </p>
  <a
    className="yoast-button yoast-button-upsell"
    href="https://yoa.st/formality-upsell-sidebar"
    rel={null}
    target="_blank"
  >
    Unlock with Premium
    <span
      aria-hidden="true"
      className="yoast-button-upsell__caret"
    />
    <span
      className="c0"
    >
      (Opens in a new browser tab)
    </span>
  </a>
</div>
`;
